# os-rs-gui

./: Cargo.toml  Dioxus.toml  input.css
.cargo/: config.toml
assets/: tailwind.css
src/: main.rs  state.rs
src/components/: equipment_grid.rs  equipment_select.rs  equipment_slot.rs  mod.rs  potions.rs  prayers.rs  search_bar.rs  skills.rs
