[package]
name = "os-rs-gui"
version = "0.1.0"
authors = ["Jonathan Yaeger <jmyaeger@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
osrs = { path = "../osrs" }
serde = "1.0.219"
async-std = "1.13.1"
serde_json = "1.0.140"
gloo-timers = { version = "0.3.0", features = ["futures"] }
log = "0.4.27"
dioxus-logger = "0.6.2"
web-sys = "0.3.77"
wasm-bindgen = "0.2.100"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
